# pytest-textualize

./: .gitignore  LICENSE  pyproject.toml
src/pytest_textualize/: __init__.py  _lazy_rich.py  _textualize.py  console_factory.py  helpers.py  model.py  rich_utils.py  settings.py  typist.py
src/pytest_textualize/factories/: console_factory.py  model_factory.py  theme_factory.py
src/pytest_textualize/plugin/: __init__.py  base.py  collector_tracer.py  error_tracer.py  exceptions.py  hookspecs.py  model.py  plugin.py  runtest_tracer.py  textualize_reporter.py  tracer.py
src/pytest_textualize/plugin/helpers/: collectors.py  header_renderer.py
src/pytest_textualize/plugin/services/: header_data_collector.py  header_renderer.py  plugin_registration.py  summary.py
src/pytest_textualize/plugins/: __init__.py
src/pytest_textualize/plugins/pytest_richtrace/: __init__.py  base.py  collector_tracer.py  error_tracer.py  hookspecs.py  plugin.py  runtest_tracer.py  textualize_reporter.py  tracer.py
src/pytest_textualize/plugins/pytest_richtrace/richtrace/: __init__.py  collector_observer.py  error_observer.py  model.py  test_execution_observer.py  textualize_reporter.py  timer.py  tracer.py
src/pytest_textualize/plugins/pytest_richtrace/richtrace/services/: __init__.py  header.py
src/pytest_textualize/plugins/pytest_richtrace/services/: header_data_collector.py  header_renderer.py  plugin_registration.py
src/pytest_textualize/textualize/: __init__.py  console.py  console_factory.py  hook_message.py  logging.py  settings.py  stirps_tags.py  syntax.py  tracebacks.py  verbose_log.py
src/pytest_textualize/textualize/theme/: error_report_styles.py  highlighters.py  styles.py  syntax.py  terminal_theme.py  testing.py  themes.py  themes_scripts.py
src/pytest_textualize/textualize/theme/styles/: __init__.py  error_report_styles.py
static/: textualize_styles.ini
static/styles/: morning_glory.ini  standard_styles.cfg  truecolor_styles.cfg  truecolor_styles.ini
static/themes/: fuck.ini  textualize_styles.ini
tests/: __main__.py  conftest.py  manifest.json  test_exceptions_console_message.py
tests/helpers/: __init__.py  env.py  lorem.py  manifest.py
tests/in_progress/: console_factory_tests.py  settings_tests.py  test_exections_textualize_runtime_error.py  test_tracebacks.py  tracer_messages_tests.py  verbose_logging_tests.py
tests/plugin_tests/self/: tests_pytester.py
tests/plugin_tests/textualize_tests/: console_factory_tests.py  settings_tests.py
tests/plugin_tests/textualize_tests/console_tests/: __init__.py  console_factory_tests.py
tests/rich_tests/: __init__.py  hook_message_tests.py  lark_tests.py  rich_utils_tests.py  theme_tests.py
tests/setup_tests/: tests_textwrap.py
