[project]
name = "pytest-textualize"
version = "0.1.0"
description = "Leverage rich textualize for richer test session output."
authors = [
    {name = "Dani Vainstein",email = "solmarkn@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich (>=14.0.0,<15.0.0)",
    "pendulum (>=3.1.0,<4.0.0)",
    "pytest (>=8.4.0,<9.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-extra-types (>=2.10.5,<3.0.0)",
    "pyhamcrest (>=2.1.0,<3.0.0)"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
]

[tool.poetry]
packages = [{include = "pytest_textualize", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
mypy = "^1.16.1"


[tool.poetry.group.test.dependencies]
pytest-mypy = "^1.0.1"
pyhamcrest = "^2.1.0"

[tool.mypy]
files = "src, tests"
mypy_path = "src"
show_error_codes = true
strict = true
namespace_packages = true
explicit_package_bases = true
enable_error_code = [
]
exclude = [
    "tests/fixtures",
    "tests/utils/fixtures",
]

[tool.black]
line-length = 100
verbose = true

[tool.pytest.ini_options]
minversion = "8.3"
verbosity_assertions = 0
python_files = ["tests_*.py"]
python_functions = ["test_*"]
norecursedirs = [
    ".idea", ".pytest_cache", "src", "out", "static"
]
log_level = "WARNING"
log_format = "%(message)s"
log_date_format = "[%X]"
addopts = [
    "-p no:logging", "-ra", "--assert=plain", "--tb=no", "--verbosity=0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
