[project]
name = "pytest-textualize"
version = "0.1.0"
description = "Leverage rich textualize for richer test session output."
authors = [
    { name = "Dani Vainstein", email = "solmarkn@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "rich (>=14.0.0,<15.0.0)",
    "pendulum (>=3.1.0,<4.0.0)",
    "pytest (>=8.4.0,<9.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-extra-types (>=2.10.5,<3.0.0)",
    "pyhamcrest (>=2.1.0,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "glom (>=24.11.0,<25.0.0)",
    "rich-argparse-plus (>=0.3.1.4,<0.4.0.0)",
    "semver (>=3.0.4,<4.0.0)",
    "lore (>=0.8.6,<0.9.0)",
    "lorem (>=0.1.1,<0.2.0)",
    "requests (>=2.32.4,<3.0.0)"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
]

[tool.poetry]
packages = [{ include = "pytest_textualize", from = "src" }]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
mypy = "^1.16.1"


[tool.poetry.group.test.dependencies]
pytest-mypy = "^1.0.1"
pyhamcrest = "^2.1.0"

[tool.mypy]
plugins = [
    "pydantic.mypy"
]
files = "src, tests"
mypy_path = "src"
show_error_codes = true
strict = true
namespace_packages = true
explicit_package_bases = true
follow_imports = "silent"
#enable_error_code = [
#]
#exclude = [
#    "tests/fixtures",
#    "tests/utils/fixtures",
#]

[tool.pydantic-mypy]
init_forbid_extra = true
warn_untyped_fields = true

[[tool.mypy.overrides]]
module = ["tests.*"]
check_untyped_defs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.black]
line-length = 100
verbose = true

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
minversion = "8.3"
testpaths = ["tests"]

#enable_assertion_pass_hook = false
norecursedirs = [".*", "src", "static", "helpers", "in_progress"]
log_level = "NOTSET"
log_format = "%(message)s"
log_date_format = "[%X]"
addopts = [
    "-p no:logging", "-ra", "--assert=plain"
]

[tool.textualize-settings.console]
color_system = "truecolor"
force_terminal = true
legacy_windows = false

[tool.textualize-settings.tracebacks]
theme = "pycharm_dark"
max_frames = 50
# suppress = ["pluggy"]

[tool.textualize-settings.logging]
rich_tracebacks = true
tracebacks_theme = "pycharm_dark"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
